--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "license": "UNLICENSED",
   "engines": {
-    "npm": ">=8.0.0 <9.0.0",
-    "node": ">=16.0.0 <17.0.0"
+    "npm": "^9.7.2",
+    "node": "18.16.0"
   },
   "scripts": {
     "prebuild": "rimraf dist",
